# python-template

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml  requirements.txt
container/: Dockerfile
container/repo-files/: centos-app.repo  centos-base.repo
scripts/: setup.sh
src/app/: db.py  main.py  models.py
src/tests/: conftest.py  test_main.py
