[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
sqlmodel = "^0.0.16"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = "^7.6.2"
pytest-cov = "^5.0.0"
black = "^24.10.0"
flake8 = "^7.1.1"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.8.19"
flake8-import-order = "^0.18.2"
safety = "^3.2.8"
pre-commit-hooks = "^5.0.0"
isort = "^5.13.2"
pep8-naming = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
